Better GUI: highlight errors